# SETR_P2_Trab1

./: CMakeLists.txt  Makefile  README.md  config_file  fifo.c  fifo.h  main.c
docs/html/: annotated.html  bug.html  classes.html  dir_4a4ab4ae129643df3dc94a667e11d2a7.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  dir_749d1a2f00d42872436c8c67e7a74873.html  dir_980c2a994f2fc972fe445cccccb9d8f1.html  dir_bfec047177fd926ba88764c7f25fa1bf.html  dir_c7a03e4f681940af67f4f434e2dc4faf.html  dir_e87fbc194388071daa93f848eb6afbf5.html  fifo_8c.html  fifo_8c__incl.map  fifo_8c__incl.md5  fifo_8h.html  fifo_8h__dep__incl.dot  fifo_8h__dep__incl.map  fifo_8h__dep__incl.md5  fifo_8h__incl.dot  fifo_8h__incl.map  fifo_8h__incl.md5  fifo_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  main_8c.html  main_8c__incl.dot  main_8c__incl.map  main_8c__incl.md5  md_README.html  pages.html  structCONTENT-members.html  structCONTENT.html  structMYFIFO-members.html  structMYFIFO.html  (+5 more)
docs/html/search/: all_0.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  files_0.js  functions_0.js  pages_0.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
libs/: CMakeLists.txt  fifo.c  fifo.h
